[package]
name = "eschaton"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = "3.14.0"
tabled = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
unicode-width = "0.2.1"
